fix image spacing

--- a/src/styles/molecules/wp-block-image.css
+++ b/src/styles/molecules/wp-block-image.css
@@ -1,7 +1,8 @@
 .wp-block-image {
 	@mixin standard-width;
 
-	margin: var(--medium-spacing) auto;
+	margin-top: var(--medium-spacing);
+	margin-bottom: var(--medium-spacing);
 
 	&.alignfull {
 		@mixin full-width;
